; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c_test_memset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c_test_memset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kasan_test = type { i32 }

@STACK_ARRAY_SZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kasan_test*)* @test_memset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_memset(%struct.kasan_test* %0) #0 {
  %2 = alloca %struct.kasan_test*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store %struct.kasan_test* %0, %struct.kasan_test** %2, align 8
  %5 = load %struct.kasan_test*, %struct.kasan_test** %2, align 8
  %6 = call i32 @TEST_START(%struct.kasan_test* %5)
  %7 = load i32, i32* @STACK_ARRAY_SZ, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %3, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %4, align 8
  %11 = load i32, i32* @STACK_ARRAY_SZ, align 4
  %12 = call i32 @memset(i32* %10, float 1.010000e+02, i32 %11)
  %13 = call i32 (...) @TEST_BARRIER()
  %14 = load %struct.kasan_test*, %struct.kasan_test** %2, align 8
  %15 = call i32 @TEST_FAULT(%struct.kasan_test* %14)
  %16 = load i32, i32* @STACK_ARRAY_SZ, align 4
  %17 = add nsw i32 %16, 1
  %18 = call i32 @memset(i32* %10, float 1.020000e+02, i32 %17)
  %19 = load %struct.kasan_test*, %struct.kasan_test** %2, align 8
  %20 = call i32 @TEST_NOFAULT(%struct.kasan_test* %19)
  %21 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %21)
  ret i32 0
}

declare dso_local i32 @TEST_START(%struct.kasan_test*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @memset(i32*, float, i32) #1

declare dso_local i32 @TEST_BARRIER(...) #1

declare dso_local i32 @TEST_FAULT(%struct.kasan_test*) #1

declare dso_local i32 @TEST_NOFAULT(%struct.kasan_test*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
